--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -14,6 +14,7 @@
   "Customer care": "Customer care",
   "Cut": "Cut",
   "Delivery": "Delivery",
+  "Refresh page": "Refresh page",
   "delivery": "Delivery",
   "Filter": "filter",
   "Help": "Help and support",
@@ -24,7 +25,7 @@
   "Login": "Login",
   "material": "Material",
   "Material": "Material",
-  "No products": "No products were found",
+  "No products found": "No products were found on this website",
   "Novelties": "Novelties",
   "Out of stock": "Temporarily out of stock",
   "Payment methods": "Payment methods",
