--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -21,7 +21,7 @@
   "How to track": "Suivre ses commandes",
   "Load more": "Plus encore",
   "Login": "Se connecter",
-  "No products": "Aucun produits",
+  "No products found": "Aucun produits n'a pu être trouvé sur ce site",
   "Novelties": "Nouveautés",
   "Out of stock": "Rupture de stock",
   "Payment methods": "Moyens de paiements",
@@ -52,6 +52,7 @@
   "my_account": "Votre compte",
   "price": "Prix",
   "product_measurements": "Mesures produits",
+  "Refresh page": "Rafraîchir la page",
   "report_abuse": "Signaler un abus",
   "review": "évaluation | évaluations",
   "reviewed_in": "Commenté en {country}",
