--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -5,6 +5,11 @@
   "Enter your email": "Enter your email",
   "novelties": "Novelties",
   "Sale": "Sale",
+  "Cart": "Cart",
+  "Remove": "Remove",
+  "View basket": "View basket",
+  "Checkout": "Checkout",
+  "You cart is currently empty": "You cart is currently empty",
   "Brand": "Brand",
   "Color": "Color",
   "Company info": "Company info",
@@ -24,6 +29,8 @@
   "Load more": "Load more",
   "Login": "Login",
   "material": "Material",
+  "New": "New",
+  "Skirts": "Jupes",
   "Material": "Material",
   "No products found": "No products were found on this website",
   "Novelties": "Novelties",
