--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -4,9 +4,16 @@
   "Add to list": "Ajouter à votre liste",
   "Brand": "Marques",
   "Color": "Couleur",
+  "Cart": "Mon panier",
+  "Remove": "Retirer",
+  "View basket": "Voir le panier",
+  "Checkout": "Paiement",
   "Sale": "Solde",
+  "New": "Nouveau",
+  "Skirts": "Skirts",
   "Company info": "Informations",
   "Contact us": "Nous contacter",
+  "You cart is currently empty": "Votre panier est vide",
   "Copyright": "Tous droits réservés :",
   "Delivery and returns": "Retours et livraisons",
   "novelties": "Nouveautés",
