--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -64,6 +64,7 @@
   "most_recent": "Most recent",
   "my_account": "My account",
   "price": "Price",
+  "product": "product | products",
   "product_measurements": "Product measurements",
   "report_abuse": "Report abuse",
   "review": "review | reviews",
