--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -5,6 +5,7 @@
   "Brand": "Marques",
   "Color": "Couleur",
   "Cart": "Mon panier",
+  "product": "produit | produits",
   "Remove": "Retirer",
   "View basket": "Voir le panier",
   "Checkout": "Paiement",
