Test improvements + Translation

--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -2,67 +2,88 @@
   "About us": "About us",
   "Add to cart": "Add to cart",
   "Add to list": "Add to list",
-  "Enter your email": "Enter your email",
-  "novelties": "Novelties",
-  "Sale": "Sale",
-  "Cart": "Cart",
-  "Remove": "Remove",
-  "View basket": "View basket",
-  "Checkout": "Checkout",
-  "You cart is currently empty": "You cart is currently empty",
+  "Bestsellers": "Bestsellers",
   "Brand": "Brand",
+  "Cart": "Cart",
+  "Checkout": "Checkout",
+  "Leggings sets": "Leggings sets",
   "Color": "Color",
   "Company info": "Company info",
-  "Delivery and returns": "Delivery and returns",
   "Contact us": "Contact us",
+  "Cookie policy": "Cookie policy",
   "Copyright": "Copyright:",
   "Customer care": "Customer care",
   "Cut": "Cut",
   "Delivery": "Delivery",
-  "Refresh page": "Refresh page",
-  "delivery": "Delivery",
+  "Delivery and returns": "Delivery and returns",
+  "Enter your email": "Enter your email",
+  "Enter your mail": "Enter your email",
   "Filter": "filter",
   "Help": "Help and support",
   "Home": "Home",
   "How to order": "How to order",
   "How to track": "How to track",
+  "Join the": "Join the {value}",
   "Load more": "Load more",
   "Login": "Login",
-  "material": "Material",
-  "New": "New",
-  "Skirts": "Jupes",
   "Material": "Material",
+  "My account": "My account",
+  "New": "New",
   "No products found": "No products were found on this website",
   "Novelties": "Novelties",
   "Out of stock": "Temporarily out of stock",
   "Payment methods": "Payment methods",
   "Privacy policy": "Privacy policy",
+  "Profile": "Profile",
+  "Refresh page": "Refresh page",
+  "Remove": "Remove",
   "Returns": "Returns",
+  "Sale": "Sale",
+  "Search": "Search",
   "Season": "Season",
-  "Shop": "Shop",
+  "See all": "See all",
   "Shipping info": "Shipping info",
+  "Shop": "Shop",
   "Signup": "Signup",
-  "Subscribe": "Subsribe",
-  "Join the": "Join the {value}",
   "Sitemap": "Sitemap",
   "Size": "Size",
   "Size guide": "Size guide",
+  "Skirts": "Jupes",
+  "Subscribe": "Subsribe",
+  "Terms and conditions": "Terms and conditions",
   "Tissue": "Tissue",
+  "Underwear": "Underwear",
+  "Wired": "Wired",
+  "Padded": "Padded",
+  "Non padded": "None padded",
+  "Balcony": "Balcony",
+  "Triangle": "Triangle",
+  "Non wired": "Non wired",
   "Unique size": "Unique size",
+  "View all": "View all",
+  "View basket": "View basket",
   "Write new review": "Write a customer review",
+  "You cart is currently empty": "You cart is currently empty",
+  "You may also like": "You may also like",
   "advantages": "Prime",
   "body_measurements": "Body measurements",
   "brand": "Brand",
+  "Trending": "Trending",
+  "Apparel": "Apparel",
   "color": "Color",
   "cut": "Cut",
-  "Profile": "Profile",
+  "Your cart is currently empty": "Your cart is currently empty",
+  "delivery": "Delivery",
+  "delivery_conditions": "Free Standard Delivery on orders over {value}",
+  "express_delivery_fee": "Express Delivery on orders over {value} is {fee}",
   "found_this_helpful": "{total} people found this helpful | {total} person found this helpful",
   "helpful": "Helpful",
-  "Enter your mail": "Enter your email",
   "in_stock": "In stock",
   "interest_rate_payments": "4 interest-free payments of {value} with paypal",
+  "material": "Material",
   "most_recent": "Most recent",
   "my_account": "My account",
+  "novelties": "Novelties",
   "price": "Price",
   "product": "product | products",
   "product_measurements": "Product measurements",
@@ -72,16 +93,9 @@
   "season": "Season",
   "secured_payments": "Secured payments",
   "size": "Size",
-  "Terms and conditions": "Terms and conditions",
-  "Cookie policy": "Cookie policy",
   "top_reviews": "Top reviews",
   "verified_order": "Verified order",
   "your_account": "Your account",
   "your_orders": "My orders",
-  "your_payments": "Payments",
-  "You may also like": "You may also like",
-  "delivery_conditions": "Free Standard Delivery on orders over {value}",
-  "express_delivery_fee": "Express Delivery on orders over {value} is {fee}",
-  "View all": "View all",
-  "My account": "My account"
+  "your_payments": "Payments"
 }
