--- a/front/src/locales/es-ES.json
+++ b/front/src/locales/es-ES.json
@@ -1,4 +1,5 @@
 {
+  "Bestsellers": "",
   "Brand": "",
   "Color": "",
   "Cut": "",
@@ -11,10 +12,12 @@
   "Material": "",
   "No products": "",
   "Novelties": "",
+  "Search": "",
   "Season": "",
   "Signup": "",
   "Tissue": "",
   "Unique size": "",
+  "Voir tout": "",
   "brand": "",
   "cut": "",
   "message": "Hello",
