--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -2,84 +2,98 @@
   "About us": "À propos",
   "Add to cart": "Ajouter au panier",
   "Add to list": "Ajouter à votre liste",
+  "Bestsellers": "Meilleures ventes",
   "Brand": "Marques",
-  "Color": "Couleur",
   "Cart": "Mon panier",
-  "product": "produit | produits",
-  "Remove": "Retirer",
-  "View basket": "Voir le panier",
   "Checkout": "Paiement",
-  "Sale": "Solde",
-  "New": "Nouveau",
-  "Skirts": "Skirts",
+  "Color": "Couleur",
+  "Leggings sets": "Ensemble leggings",
   "Company info": "Informations",
   "Contact us": "Nous contacter",
-  "You cart is currently empty": "Votre panier est vide",
+  "Cookie policy": "Politique sur les cookies",
   "Copyright": "Tous droits réservés :",
-  "Delivery and returns": "Retours et livraisons",
-  "novelties": "Nouveautés",
   "Customer care": "Assistance",
   "Cut": "Coupe",
+  "Wired": "Avec armatures",
+  "Non wired": "Sans armatures",
+  "Padded": "Rembourré",
+  "Balcony": "Balcony",
+  "Triangle": "Triangle",
+  "Non padded": "Non rembourré",
+  "Underwear": "Sous-Vêtements",
   "Delivery": "Livraison",
-  "delivery": "Livraison",
+  "Delivery and returns": "Retours et livraisons",
+  "Enter your email": "Saisissez votre addresse email",
   "Filter": "Trier",
   "Help": "Assistance",
   "Home": "Accueil",
   "How to order": "Comment commander",
   "How to track": "Suivre ses commandes",
+  "Join the": "Rejoignez la {value}",
   "Load more": "Plus encore",
   "Login": "Se connecter",
+  "My account": "Mon compte",
+  "New": "Nouveau",
   "No products found": "Aucun produits n'a pu être trouvé sur ce site",
   "Novelties": "Nouveautés",
   "Out of stock": "Rupture de stock",
   "Payment methods": "Moyens de paiements",
   "Privacy policy": "Politique de confidentialité",
+  "Profile": "Profil",
+  "Refresh page": "Rafraîchir la page",
+  "Remove": "Retirer",
   "Returns": "Retours",
+  "Sale": "Solde",
+  "Search": "Rechercher",
   "Season": "Saisons",
+  "See all": "Voir tout",
   "Shipping info": "Livraison",
+  "Shop": "Boutique",
+  "Trending": "A la une",
+  "Apparel": "Vêtements",
   "Signup": "Nouveau compte",
   "Sitemap": "Plan du site",
   "Size": "Taille",
+  "Your cart is currently empty": "Votre panier est vide",
   "Size guide": "Guide des tailles",
+  "Skirts": "Skirts",
+  "Subscribe": "S'abonner",
+  "Terms and conditions": "Conditions générales",
   "Tissue": "Matière",
   "Unique size": "Taille unique",
+  "View all": "Voir Tous",
+  "View basket": "Voir le panier",
   "Write new review": "Ecrire une commentaire client",
+  "You cart is currently empty": "Votre panier est vide",
+  "You may also like": "Vous allez adorer ça",
   "advantages": "Avantages",
   "body_measurements": "Mesures corps",
   "brand": "Marques",
   "color": "Couleurs",
   "cut": "Coupe",
+  "delivery": "Livraison",
+  "delivery_conditions": "Livraison standard gratuite pour les commandes de plus de {value}",
+  "express_delivery_fee": "La livraison express pour les commandes de plus de {value} est de {fee}",
   "found_this_helpful": "{total} personne a trouvé cela utile | {total} personnes ont trouvé cela utile",
   "helpful": "Utile",
-  "Subscribe": "S'abonner",
-  "Join the": "Rejoignez la {value}",
   "in_stock": "En stock",
   "interest_rate_payments": "Payez {value} x 4 fois sans frais avec Paypal",
   "material": "Matière",
   "most_recent": "Le plus récent",
   "my_account": "Votre compte",
+  "novelties": "Nouveautés",
   "price": "Prix",
+  "product": "produit | produits",
   "product_measurements": "Mesures produits",
-  "Refresh page": "Rafraîchir la page",
   "report_abuse": "Signaler un abus",
   "review": "évaluation | évaluations",
   "reviewed_in": "Commenté en {country}",
   "season": "Saisons",
   "secured_payments": "Transaction sécurisée",
   "size": "Taille",
-  "Terms and conditions": "Conditions générales",
-  "Cookie policy": "Politique sur les cookies",
   "top_reviews": "Meilleures évaluations",
   "verified_order": "Achat vérifié",
   "your_account": "Votre compte",
   "your_orders": "Vos commandes",
-  "your_payments": "Vos paiements",
-  "Enter your email": "Saisissez votre addresse email",
-  "You may also like": "Vous allez adorer ça",
-  "delivery_conditions": "Livraison standard gratuite pour les commandes de plus de {value}",
-  "express_delivery_fee": "La livraison express pour les commandes de plus de {value} est de {fee}",
-  "View all": "Voir Tous",
-  "Shop": "Boutique",
-  "Profile": "Profil",
-  "My account": "Mon compte"
+  "your_payments": "Vos paiements"
 }
