--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -5,6 +5,8 @@
   "Bestsellers": "Bestsellers",
   "Brand": "Brand",
   "Cart": "Cart",
+  "Continue shopping": "Continue shopping",
+  "Summary": "Summary",
   "Checkout": "Checkout",
   "Leggings sets": "Leggings sets",
   "Color": "Color",
