--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -7,6 +7,8 @@
   "Cart": "Mon panier",
   "Checkout": "Paiement",
   "Color": "Couleur",
+  "Continue shopping": "Continuer votre shopping",
+  "Summary": "Sommaire",
   "Leggings sets": "Ensemble leggings",
   "Company info": "Informations",
   "Contact us": "Nous contacter",
