--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -106,5 +106,8 @@
   "Latest": "Latest",
   "Alphabetically A-Z": "Alphabetically A-Z",
   "Alphabetically Z-A": "Alphabetically Z-A",
-  "Select an option": "Select an option"
+  "Select an option": "Select an option",
+  "Fitting room": "Fitting room",
+  "newsletter_phrase": "You're signing up for new product launch release dates, top offers and {company} updates",
+  "newsletter_title_phrase": "Join the female family"
 }
