--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -104,5 +104,8 @@
   "Latest": "Récent",
   "Alphabetically A-Z": "Alphabétique A-Z",
   "Alphabetically Z-A": "Alphabétique Z-A",
-  "Select an option": "Selectionnez une option"
+  "Select an option": "Selectionnez une option",
+  "Fitting room": "La cabine d'essayage",
+  "newsletter_phrase": "Inscrivez-vous pour connaître les dates de sortie de nouveaux produits, les meilleures offres et les actus {company}",
+  "newsletter_title_phrase": "Rejoignez la female family"
 }
