--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -1,20 +1,20 @@
 {
   "About us": "À propos",
-  "Add to cart": "Ajouter au panier",
+  "Add to cart": "Añadir a mi bolsa",
   "Add to list": "Ajouter à votre liste",
   "Bestsellers": "Meilleures ventes",
   "Brand": "Marques",
   "Cart": "Mon panier",
   "Checkout": "Paiement",
-  "Color": "Couleur",
+  "Color": "Color",
   "Continue shopping": "Continuer votre shopping",
   "Summary": "Sommaire",
   "Leggings sets": "Ensemble leggings",
-  "Company info": "Informations",
+  "Company info": "información",
   "Contact us": "Nous contacter",
   "Cookie policy": "Politique sur les cookies",
   "Copyright": "Tous droits réservés :",
-  "Customer care": "Assistance",
+  "Customer care": "Ayuda",
   "Cut": "Coupe",
   "Wired": "Avec armatures",
   "Non wired": "Sans armatures",
@@ -27,14 +27,14 @@
   "Delivery and returns": "Retours et livraisons",
   "Enter your email": "Saisissez votre addresse email",
   "Filter": "Trier",
-  "Help": "Assistance",
+  "Help": "Información y ayuda",
   "Home": "Accueil",
   "How to order": "Comment commander",
   "How to track": "Suivre ses commandes",
   "Join the": "Rejoignez la {value}",
-  "Load more": "Plus encore",
-  "Login": "Se connecter",
-  "My account": "Mon compte",
+  "Load more": "Cargar más",
+  "Login": "Accede",
+  "My account": "Mi cuenta",
   "Admin": "Admin",
   "New": "Nouveau",
   "No products found": "Aucun produits n'a pu être trouvé sur ce site",
@@ -47,16 +47,16 @@
   "Remove": "Retirer",
   "Returns": "Retours",
   "Sale": "Solde",
-  "Search": "Rechercher",
+  "Search": "Buscar artículos y marcas",
   "Season": "Saisons",
   "See all": "Voir tout",
   "Shipping info": "Livraison",
   "Shop": "Boutique",
   "Trending": "A la une",
   "Apparel": "Vêtements",
-  "Signup": "Nouveau compte",
+  "Signup": "Regístrate",
   "Sitemap": "Plan du site",
-  "Size": "Taille",
+  "Size": "Talla",
   "Your cart is currently empty": "Votre panier est vide",
   "Size guide": "Guide des tailles",
   "Skirts": "Skirts",
@@ -109,11 +109,13 @@
   "newsletter_phrase": "Inscrivez-vous pour connaître les dates de sortie de nouveaux produits, les meilleures offres et les actus {company}",
   "newsletter_title_phrase": "Rejoignez la female family",
   "An error occured": "Une erreur est survenue sur la page",
-  "failed_search_title": "Aucun article ne correspond à votre recherche",
-  "failed_sarch_content": "Mais vous pouvez toujours retenter votre chance : vérifiez l'orthographe ou essayez des termes de recherche moins spécifiques.",
-  "Sign in": "Se connecter",
-  "Email": "Addresse email",
-  "Password": "Mot de passe",
-  "email": "Addresse email",
-  "password": "Mot de passe"
+  "You have no saved items": "No tienes ningún artículo guardado",
+  "Sign in to sync your saved items across all your devices": "Accede para sincronizar tus artículos en todos tus dispositivos.",
+  "failed_search_title": "Ningún artículo corresponde a tu búsqueda",
+  "failed_sarch_content": "Inténtalo de nuevo – comprueba la ortografía o introduce unos términos de búsqueda menos específicos.",
+  "Sign in": "Accede",
+  "Email": "Dirección de email",
+  "Password": "Contraseña",
+  "email": "Dirección de email",
+  "password": "Contraseña"
 }
