--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -42,7 +42,7 @@
   "Remove": "Remove",
   "Returns": "Returns",
   "Sale": "Sale",
-  "Search": "Search",
+  "Search": "Search for articles",
   "Season": "Season",
   "See all": "See all",
   "Shipping info": "Shipping info",
