--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -4,7 +4,7 @@
   "Add to list": "Ajouter à votre liste",
   "Bestsellers": "Meilleures ventes",
   "Brand": "Marques",
-  "Cart": "Mon panier",
+  "Cart": "Bolsa",
   "Checkout": "Paiement",
   "Color": "Color",
   "Continue shopping": "Continuer votre shopping",
@@ -12,7 +12,7 @@
   "Leggings sets": "Ensemble leggings",
   "Company info": "información",
   "Contact us": "Nous contacter",
-  "Cookie policy": "Politique sur les cookies",
+  "Cookie policy": "Privacidad y cookies",
   "Copyright": "Tous droits réservés :",
   "Customer care": "Ayuda",
   "Cut": "Coupe",
@@ -36,9 +36,9 @@
   "Login": "Accede",
   "My account": "Mi cuenta",
   "Admin": "Admin",
-  "New": "Nouveau",
+  "New": "Nuevo",
   "No products found": "Aucun produits n'a pu être trouvé sur ce site",
-  "Novelties": "Nouveautés",
+  "Novelties": "Novedades",
   "Out of stock": "Rupture de stock",
   "Payment methods": "Moyens de paiements",
   "Privacy policy": "Politique de confidentialité",
@@ -49,7 +49,7 @@
   "Sale": "Solde",
   "Search": "Buscar artículos y marcas",
   "Season": "Saisons",
-  "See all": "Voir tout",
+  "See all": "Ver todo",
   "Shipping info": "Livraison",
   "Shop": "Boutique",
   "Trending": "A la une",
@@ -61,17 +61,17 @@
   "Size guide": "Guide des tailles",
   "Skirts": "Skirts",
   "Subscribe": "S'abonner",
-  "Terms and conditions": "Conditions générales",
+  "Terms and conditions": "Términos y condiciones",
   "Tissue": "Matière",
   "Unique size": "Taille unique",
-  "View all": "Voir Tous",
+  "View all": "Ver todo",
   "View basket": "Voir le panier",
   "Write new review": "Ecrire une commentaire client",
   "You cart is currently empty": "Votre panier est vide",
   "You may also like": "Vous allez adorer ça",
   "advantages": "Avantages",
   "body_measurements": "Mesures corps",
-  "brand": "Marques",
+  "brand": "Marcas",
   "color": "Couleurs",
   "cut": "Coupe",
   "delivery": "Livraison",
@@ -85,7 +85,7 @@
   "most_recent": "Le plus récent",
   "my_account": "Votre compte",
   "novelties": "Nouveautés",
-  "price": "Prix",
+  "price": "Precio",
   "product": "produit | produits",
   "product_measurements": "Mesures produits",
   "report_abuse": "Signaler un abus",
@@ -97,7 +97,7 @@
   "top_reviews": "Meilleures évaluations",
   "verified_order": "Achat vérifié",
   "your_account": "Votre compte",
-  "your_orders": "Vos commandes",
+  "your_orders": "Mis pedidos",
   "your_payments": "Vos paiements",
   "Price high to low": "Prix décroissant",
   "Price low to high": "Prix croissant",
