--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -47,7 +47,7 @@
   "Remove": "Retirer",
   "Returns": "Retours",
   "Sale": "Solde",
-  "Search": "Rechercher",
+  "Search": "Rechercher des articles",
   "Season": "Saisons",
   "See all": "Voir tout",
   "Shipping info": "Livraison",
