--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -117,5 +117,7 @@
   "Email": "Dirección de email",
   "Password": "Contraseña",
   "email": "Dirección de email",
-  "password": "Contraseña"
+  "password": "Contraseña",
+  "Discover": "Descubrir",
+  "Select language": "Cambiar la lengua"
 }
