--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -115,5 +115,7 @@
   "Email": "Addresse email",
   "Password": "Mot de passe",
   "email": "Addresse email",
-  "password": "Mot de passe"
+  "password": "Mot de passe",
+  "Discover": "Découvrir",
+  "Select language": "Choisir sa langue"
 }
