--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -119,5 +119,6 @@
   "email": "Dirección de email",
   "password": "Contraseña",
   "Discover": "Descubrir",
-  "Select language": "Cambiar la lengua"
+  "Select language": "Cambiar la lengua",
+  "styles_found": "{n} estilo encontrado|{n} estilos encontrados"
 }
