--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -119,5 +119,6 @@
   "email": "Addresse email",
   "password": "Mot de passe",
   "Discover": "Découvrir",
-  "Select language": "Choisir sa langue"
+  "Select language": "Choisir sa langue",
+  "styles_found": "{n} produit trouvé|{n} produits trouvés"
 }
