--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -128,5 +128,6 @@
   "Cookie settings": "Cookie settings",
   "password1": "Password",
   "password2": "Password confirmation",
-  "name": "Name"
+  "name": "Name",
+  "Find a store": "Find a store"
 }
