--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -126,5 +126,6 @@
   "Cookie settings": "Cookie settings",
   "password1": "Password 1",
   "password2": "Password 2",
-  "name": "Name"
+  "name": "Name",
+  "Find a store": "Find a store"
 }
