--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -126,5 +126,6 @@
   "Cookie settings": "Réglages cookies",
   "password1": "Mot de passe",
   "password2": "Confirmez votre mot de passe",
-  "name": "Nom"
+  "name": "Nom",
+  "Find a store": "Trouver une boutique"
 }
