--- a/init.ipynb
+++ b/init.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "['project.ini']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,31 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_DIR = os.path.abspath('.')"
+    "BASE_DIR = pathlib.Path('.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Settings already configured.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7324/3985558001.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m settings.configure(\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mBASE_DIR\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBASE_DIR\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     INSTALLED_APPS=[\n\u001b[0;32m      4\u001b[0m         \u001b[1;34m'django.contrib.admin'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;34m'django.contrib.auth'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\django\\conf\\__init__.py\u001b[0m in \u001b[0;36mconfigure\u001b[1;34m(self, default_settings, **options)\u001b[0m\n\u001b[0;32m    118\u001b[0m         \"\"\"\n\u001b[0;32m    119\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrapped\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mempty\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 120\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Settings already configured.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    121\u001b[0m         \u001b[0mholder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUserSettingsHolder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdefault_settings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0moptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Settings already configured."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.configure(\n",
     "    BASE_DIR=BASE_DIR,\n",
@@ -112,18 +99,27 @@
     "\n",
     "        'api',\n",
     "        'shop',\n",
+    "        'variants',\n",
     "        'cart',\n",
     "        'orders',\n",
     "        'shipments',\n",
     "        'reviews',\n",
     "    ],\n",
     "    DATABASES={\n",
+    "        # 'default': {\n",
+    "        #     'ENGINE': 'django.db.backends.sqlite3',\n",
+    "        #     'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
+    "        # }\n",
     "        'default': {\n",
-    "            'ENGINE': 'django.db.backends.sqlite3',\n",
-    "            'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
+    "            'ENGINE': 'django.db.backends.postgresql',\n",
+    "            'NAME': 'mycommerce',\n",
+    "            'USER': 'test_user',\n",
+    "            'PASSWORD': 'touparet',\n",
+    "            'HOST': 'localhost',\n",
+    "            'PORT': '5432'\n",
     "        }\n",
     "    },\n",
-    "    MEDIA_ROOT=os.path.join(BASE_DIR, 'media'),\n",
+    "    MEDIA_ROOT=BASE_DIR.joinpath('media'),\n",
     "    DEFAULT_AUTO_FIELD='django.db.models.BigAutoField',\n",
     "    PRODUCT_MODEL='shop.Product',\n",
     "    CUSTOMER_ORDERS_MODEL='orders.CustomerOrder',\n",
@@ -133,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +138,7 @@
        "'True'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,19 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_files():\n",
     "    if os.path.exists(IMAGES_FOLDER_PATH):\n",
-    "        result = list(os.walk(IMAGES_FOLDER_PATH))\n",
-    "        full_path, dirs, files = result[0]\n",
-    "        \n",
-    "        images = filter(lambda x: any([x.endswith('jpg'), x.endswith('jpeg')]), files)\n",
-    "        videos = filter(lambda x: x.endswith('mp4'), files)\n",
-    "        \n",
-    "        return full_path, list(images), list(videos)\n",
+    "        if os.path.isdir(IMAGES_FOLDER_PATH):\n",
+    "            result = list(os.walk(IMAGES_FOLDER_PATH))\n",
+    "            full_path, dirs, files = result[0]\n",
+    "            \n",
+    "            images = filter(lambda x: any([x.endswith('jpg'), x.endswith('jpeg')]), files)\n",
+    "            videos = filter(lambda x: x.endswith('mp4'), files)\n",
+    "            \n",
+    "            return full_path, list(images), list(videos)\n",
     "    return None, [], []"
    ]
   },
@@ -195,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,12 +202,13 @@
     "import random\n",
     "import datetime\n",
     "import pytz\n",
-    "from shop.utils import create_product_slug\n"
+    "from shop.utils import create_product_slug\n",
+    "from shop.choices import ColorChoices, CategoryChoices\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,9 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created 47 products\n"
+     ]
+    }
+   ],
    "source": [
     "def create_product_fixtures(model_dotted_path):\n",
     "    \"\"\"Creates a bunch of generic products for the test database\"\"\"\n",
@@ -238,14 +244,16 @@
     "        \n",
     "        for i, name in enumerate(names):\n",
     "            if name is not None:\n",
+    "                color = str(random.choice(ColorChoices.choices)[0])\n",
+    "                \n",
     "                product = {\n",
     "                    'name': name.title(),\n",
-    "                    'color': random.choice(['Red' , 'Blue']),\n",
+    "                    'color': color,\n",
     "                    'unit_price': random.randrange(10, 800),\n",
     "                    'active': False,\n",
     "                    'display_new': random.choice([True, False]),\n",
-    "                    'slug': create_product_slug(name),\n",
-    "                    'category': random.choice(['Skirts', 'Activewear', 'Panties']),\n",
+    "                    'slug': create_product_slug(name, color),\n",
+    "                    'category': str(random.choice(CategoryChoices.choices)[0]),\n",
     "                    'created_on': current_date,\n",
     "                    'modified_on': current_date\n",
     "                }\n",
@@ -267,27 +275,15 @@
     "        json.dump(products, f)\n",
     "        print('Created', len(names), 'products')\n",
     "\n",
-    "# create_product_fixtures('shop.Product')\n"
+    "create_product_fixtures('shop.Product')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shop.choices import ColorChoices, CategoryChoices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# There are 36 groups of images so we'll\n",
-    "# be creating a total of 36 products\n",
-    "\n",
     "def generate_generic_products():\n",
     "    with open(os.path.join(IMAGES_FOLDER_PATH, 'fashion.json'), mode='w', encoding='utf-8') as f:\n",
     "        products = []\n",
@@ -297,13 +293,15 @@
     "       \n",
     "        for name in names:\n",
     "            if name is not None:\n",
+    "                color = random.choice(ColorChoices.choices)[-1]\n",
+    "                \n",
     "                product = {\n",
     "                    'name': name.title(),\n",
-    "                    'color': random.choice(ColorChoices.choices)[-1],\n",
+    "                    'color': color,\n",
     "                    'unit_price': random.randrange(10, 800),\n",
     "                    'active': False,\n",
     "                    'display_new': random.choice([True, False]),\n",
-    "                    'slug': create_product_slug(name),\n",
+    "                    'slug': create_product_slug(name, color),\n",
     "                    'category': random.choice(CategoryChoices.choices)[-1]\n",
     "                }\n",
     "                \n",
@@ -318,19 +316,19 @@
     "                \n",
     "        json.dump(products, f)\n",
     "        print('Created', len(names), 'products')\n",
-    "        return products\n"
+    "        return products"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 40 products\n"
+      "Created 47 products\n"
      ]
     }
    ],
@@ -348,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_database_objects(commit=False, images_alone=False):\n",
+    "def create_media_objects(commit=False, images_alone=False):\n",
     "    full_path, images, videos = collect_files()\n",
     "        \n",
     "    def image_iterator():\n",
@@ -385,12 +383,14 @@
     "        Image.objects.bulk_create(image_iterator())\n",
     "        \n",
     "        if not images_alone:\n",
-    "            Video.objects.bulk_create(video_iterator())"
+    "            Video.objects.bulk_create(video_iterator())\n",
+    "    else:\n",
+    "        return image_iterator(), video_iterator()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,11 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_database_objects(commit=True, images_alone=False)"
+    "create_media_objects(commit=True, images_alone=False)"
    ]
   },
   {
