Added offcanvas cart

--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -51,7 +51,7 @@
   "Season": "Saisons",
   "See all": "Ver todo",
   "Shipping info": "Livraison",
-  "Shop": "Boutique",
+  "Shop": "Tienda",
   "Trending": "A la une",
   "Apparel": "Vêtements",
   "Signup": "Regístrate",
@@ -105,7 +105,7 @@
   "Alphabetically A-Z": "Alphabétique A-Z",
   "Alphabetically Z-A": "Alphabétique Z-A",
   "Select an option": "Selectionnez une option",
-  "Fitting room": "La cabine d'essayage",
+  "Fitting room": "Probador",
   "newsletter_phrase": "Inscrivez-vous pour connaître les dates de sortie de nouveaux produits, les meilleures offres et les actus {company}",
   "newsletter_title_phrase": "Rejoignez la female family",
   "An error occured": "Une erreur est survenue sur la page",
