--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -131,5 +131,7 @@
   "password2": "Password confirmation",
   "name": "Name",
   "Find a store": "Find a store",
-  "likes_and_lists": "Wishlists"
+  "likes_and_lists": "Wishlists",
+  "data_processing": "We process your personal data as stated in our Privacy Policy. You may withdraw your consent at any time by clicking the unsubscribe link at the bottom of any of our emails",
+  "first_order": "Enjoy {value}% off your first order"
 }
