--- a/front2/src/locales/es.json
+++ b/front2/src/locales/es.json
@@ -1,17 +1,17 @@
 {
-    "About us": "À propos",
+    "About us": "Quienes Somos",
     "Add to cart": "Añadir a mi bolsa",
     "Add to list": "Ajouter à votre liste",
     "Bestsellers": "Meilleures ventes",
     "Brand": "Marques",
     "Cart": "Bolsa",
-    "Checkout": "Paiement",
+    "Checkout": "Pagar ahora",
     "Color": "Color",
-    "Continue shopping": "Continuer votre shopping",
+    "Continue shopping": "Empieza comprar",
     "Summary": "Sommaire",
     "Leggings sets": "Ensemble leggings",
     "Company info": "información",
-    "Contact us": "Nous contacter",
+    "Contact us": "Contáctenos",
     "Cookie policy": "Privacidad y cookies",
     "Copyright": "Tous droits réservés :",
     "Customer care": "Ayuda",
@@ -29,12 +29,13 @@
     "Filter": "Trier",
     "Help": "Información y ayuda",
     "help": "Información y ayuda",
-    "Home": "Accueil",
+    "Home": "Página principal",
     "How to order": "Comment commander",
     "How to track": "Suivre ses commandes",
     "Join the": "Rejoignez la {value}",
     "Load more": "Cargar más",
     "Login": "Accede",
+    "Logout": "Salir",
     "My account": "Mi cuenta",
     "Admin": "Admin",
     "New": "Nuevo",
@@ -42,12 +43,12 @@
     "Novelties": "Novedades",
     "Out of stock": "Rupture de stock",
     "Payment methods": "Moyens de paiements",
-    "Privacy policy": "Politique de confidentialité",
-    "Profile": "Profil",
+    "Privacy policy": "Política de privacidad",
+    "Profile": "Perfil",
     "Refresh page": "Rafraîchir la page",
     "Remove": "Retirer",
     "Returns": "Retours",
-    "Sale": "Solde",
+    "Sale": "Rebaja",
     "Search": "Buscar artículos y marcas",
     "Season": "Saisons",
     "See all": "Ver todo",
@@ -58,18 +59,17 @@
     "Signup": "Regístrate",
     "Sitemap": "Plan du site",
     "Size": "Talla",
-    "Your cart is currently empty": "Votre panier est vide",
-    "Size guide": "Guide des tailles",
+    "Your cart is currently empty": "Tu bolsa está vacía",
+    "Size guide": "Guía de tallas",
     "Skirts": "Skirts",
     "Subscribe": "S'abonner",
     "Terms and conditions": "Términos y condiciones",
     "Tissue": "Matière",
     "Unique size": "Taille unique",
     "View all": "Ver todo",
-    "View basket": "Voir le panier",
+    "View basket": "Ver bolsa",
     "Write new review": "Ecrire une commentaire client",
-    "You cart is currently empty": "Votre panier est vide",
-    "You may also like": "Vous allez adorer ça",
+    "You may also like": "Puede que también te guste",
     "advantages": "Avantages",
     "body_measurements": "Mesures corps",
     "brand": "Marcas",
@@ -87,7 +87,7 @@
     "my_account": "Votre compte",
     "novelties": "Nouveautés",
     "price": "Precio",
-    "product": "produit | produits",
+    "product": "artículo | artículos",
     "product_measurements": "Mesures produits",
     "report_abuse": "Signaler un abus",
     "review": "évaluation | évaluations",
@@ -131,5 +131,16 @@
     "Find a store": "Find a store",
     "likes_and_lists": "Liste aime",
     "data_processing": "Nous traitons tes données personnelles conformément à notre Politique de Confidentialité. Tu peux retirer ton consentement à tout moment en cliquant sur le lien de désabonnement en bas de nos e-mails",
-    "first_order": "Profitez de {value}% sur votre première commande"
+    "first_order": "Profitez de {value}% sur votre première commande",
+    "Recently viewed": "Visto recientimente",
+    "Get discount": "Consigue {value}",
+    "Reviews": "Evaluaciones de clientes",
+    "Free shipping": "Envío gratuito exprés para pedidos de más de {value} 8-20 días laborables",
+    "Subtotal": "Subtotal",
+    "Total": "Total a pagar",
+    "Change": "Cambiar",
+    "Coupon": "Código de promoción",
+    "Choose your delivery method": "Opciones de envío",
+    "Delivery between": "Entrega entre las {date1} del {date2}",
+    "Choose a payment method": "Tipo de pago"
 }
