--- a/front2/src/locales/es.json
+++ b/front2/src/locales/es.json
@@ -123,11 +123,13 @@
     "Select language": "Cambiar la lengua",
     "styles_found": "{n} estilo encontrado|{n} estilos encontrados",
     "Remember me": "Remember me",
+    "Or register with": "O regístrate con una dirección de email",
     "Unique": "Unique",
     "Cookie settings": "Cookie settings",
-    "password1": "Password 1",
-    "password2": "Password 2",
-    "name": "Name",
+    "password1": "Contraseña 1",
+    "password2": "Contraseña 2",
+    "name": "Nombre",
+    "Register with": "Regístrate con",
     "Find a store": "Find a store",
     "likes_and_lists": "Liste aime",
     "data_processing": "Nous traitons tes données personnelles conformément à notre Politique de Confidentialité. Tu peux retirer ton consentement à tout moment en cliquant sur le lien de désabonnement en bas de nos e-mails",
