Improved side guide

--- a/front2/src/locales/en.json
+++ b/front2/src/locales/en.json
@@ -143,5 +143,6 @@
     "Change": "Change",
     "Coupon": "Coupon",
     "Delivery between": "Entrega entre las {date1} del {date2}",
-    "Choose a payment method": "Choose a payment method"
+    "Choose a payment method": "Choose a payment method",
+    "Size guide lead": "Don't know your size? Our size guide help you find the best fit!"
 }
