--- a/front2/src/locales/es.json
+++ b/front2/src/locales/es.json
@@ -144,5 +144,6 @@
     "Coupon": "Código de promoción",
     "Choose your delivery method": "Opciones de envío",
     "Delivery between": "Entrega entre las {date1} del {date2}",
-    "Choose a payment method": "Tipo de pago"
+    "Choose a payment method": "Tipo de pago",
+    "Size guide lead": "¿No sabes cuál es tu talla? ¡Nuestra guía de tallas te ayudará a encontrar la que mejor te queda!"
 }
