--- a/front2/src/locales/fr.json
+++ b/front2/src/locales/fr.json
@@ -141,5 +141,6 @@
     "Change": "Modifier",
     "Coupon": "Code promotionnel",
     "Delivery between": "Entrega entre las {date1} del {date2}",
-    "Choose a payment method": "Choose a payment method"
+    "Choose a payment method": "Choose a payment method",
+    "Size guide lead": "Vous ne connaissez pas votre taille? Notre guide des tailles vous aidera à la trouver!"
 }
