--- a/init.ipynb
+++ b/init.ipynb
@@ -4,23 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Configure file\n",
+    "# Project configuration file\n",
     "\n",
-    "Since this file will also be uploaded, this avoids exposing sensitive data by configuration global paths"
+    "Since this file will also be uploaded, this avoids exposing sensitive data by configuration global paths. So define a project.ini file with a `images_folder` variable that will point towards an images folder called `fashion`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import configparser"
+    "import configparser\n",
+    "import pathlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -29,30 +30,32 @@
        "['project.ini']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "configuration = configparser.ConfigParser()\n",
-    "configuration.read('project.ini')"
+    "config_file = configparser.ConfigParser()\n",
+    "config_file.read('project.ini')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGES_FOLDER_PATH = configuration.get('DEFAULT', 'images_folder')"
+    "IMAGES_FOLDER_PATH = pathlib.Path(config_file.get('default', 'images_folder'))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Django setup"
+    "## Django setup\n",
+    "\n",
+    "Initialize the Django backend"
    ]
   },
   {
@@ -63,13 +66,12 @@
    "source": [
     "import django\n",
     "import os\n",
-    "import pathlib\n",
     "from django.conf import settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +98,7 @@
     "        'corsheaders',\n",
     "        'rest_framework',\n",
     "        'rest_framework.authtoken',\n",
-    "\n",
-    "        'api',\n",
+    "        \n",
     "        'shop',\n",
     "        'variants',\n",
     "        'cart',\n",
@@ -106,10 +107,6 @@
     "        'reviews',\n",
     "    ],\n",
     "    DATABASES={\n",
-    "        # 'default': {\n",
-    "        #     'ENGINE': 'django.db.backends.sqlite3',\n",
-    "        #     'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
-    "        # }\n",
     "        'default': {\n",
     "            'ENGINE': 'django.db.backends.postgresql',\n",
     "            'NAME': 'mycommerce',\n",
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +135,7 @@
        "'True'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +157,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## File collection"
+    "## File collection\n",
+    "\n",
+    "Collect all the named images and videos in the images folder. The image's name will be used as the main name for the product that will be created in the databas. In that sense, similar images should have the same base name in order for them to be considered a same product."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +177,11 @@
     "            images = filter(lambda x: any([x.endswith('jpg'), x.endswith('jpeg')]), files)\n",
     "            videos = filter(lambda x: x.endswith('mp4'), files)\n",
     "            \n",
-    "            return full_path, list(images), list(videos)\n",
+    "            images = list(images)\n",
+    "            videos = list(videos)\n",
+    "            print('Collected', len(images), 'images and', len(videos), 'videos')\n",
+    "            \n",
+    "            return pathlib.Path(full_path), images, videos\n",
     "    return None, [], []"
    ]
   },
@@ -186,13 +189,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Product file generation\n",
-    "Functions to generate a generic set of products from collected named fashion images"
+    "## Product creation and fixtures\n",
+    "\n",
+    "Creates the related product for each image in the database backend. Creates a JSON fixture file for testing the proeject."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,44 +207,40 @@
     "import datetime\n",
     "import pytz\n",
     "from shop.utils import create_product_slug\n",
-    "from shop.choices import ColorChoices, CategoryChoices\n"
+    "from shop.choices import ColorChoices, CategoryChoices\n",
+    "from django.utils.crypto import get_random_string\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect_media_name(name):\n",
     "    \"\"\"Detects the true name of the media file\"\"\"\n",
-    "    result = re.match(r'(\\w+\\s)+', name)\n",
+    "    result = re.match(r'(\\w.*)(?=\\(\\d+\\))', name)\n",
     "    if result is not None:\n",
-    "        return result.group(0).strip().lower()\n"
+    "        return result.group(0).strip().lower()\n",
+    "    else:\n",
+    "        return get_random_string(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created 47 products\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def create_product_fixtures(model_dotted_path):\n",
-    "    \"\"\"Creates a bunch of generic products for the test database\"\"\"\n",
-    "    with open(os.path.join('.', 'fixtures.json'), mode='w', encoding='utf-8') as f:\n",
+    "def create_product_fixtures(model_dotted_path=None, create_fixture=False):\n",
+    "    with open(BASE_DIR / 'fixtures.json', mode='w', encoding='utf-8') as f:\n",
     "        products = []\n",
     "\n",
     "        _, images, _ = collect_files()\n",
     "        names = set(map(detect_media_name, images))\n",
-    "        current_date = str(datetime.datetime.now(tz=pytz.timezone('America/Chicago')).date())\n",
+    "\n",
+    "        timzone = pytz.timezone('America/Chicago')\n",
+    "        current_date = str(datetime.datetime.now(tz=timzone).date())\n",
     "        \n",
     "        for i, name in enumerate(names):\n",
     "            if name is not None:\n",
@@ -259,94 +259,59 @@
     "                }\n",
     "\n",
     "                is_on_sale = random.choice([True, False])\n",
+    "                product['on_sale'] = is_on_sale\n",
     "                if is_on_sale:\n",
     "                    product['sale_value'] = random.randrange(10, 50)\n",
-    "                    product['on_sale'] = True\n",
     "                else:\n",
     "                    product['sale_value'] = 0\n",
-    "                    product['on_sale'] = False\n",
-    "                    \n",
-    "                products.append({\n",
-    "                    'model': model_dotted_path,\n",
-    "                    'pk': i + 1,\n",
-    "                    'fields': product\n",
-    "                })\n",
+    "                \n",
+    "                if create_fixture:\n",
+    "                    if model_dotted_path is None:\n",
+    "                        raise ValueError('Fixtures require a model path e.g. app.MyModel')\n",
+    "                    products.append({\n",
+    "                        'pk': i + 1,\n",
+    "                        'model': model_dotted_path,\n",
+    "                        'fields': product\n",
+    "                    })\n",
     "\n",
-    "        json.dump(products, f)\n",
-    "        print('Created', len(names), 'products')\n",
+    "                    json.dump(products, f)\n",
+    "                    print('Created', len(names), 'products')\n",
+    "                else:\n",
+    "                    products.append(product)\n",
+    "        return products\n",
     "\n",
-    "create_product_fixtures('shop.Product')\n"
+    "# create_product_fixtures('shop.Product')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_generic_products():\n",
-    "    with open(os.path.join(IMAGES_FOLDER_PATH, 'fashion.json'), mode='w', encoding='utf-8') as f:\n",
-    "        products = []\n",
-    "        \n",
-    "        _, images, _ = collect_files()\n",
-    "        names = set(map(detect_media_name, images))\n",
-    "       \n",
-    "        for name in names:\n",
-    "            if name is not None:\n",
-    "                color = random.choice(ColorChoices.choices)[-1]\n",
-    "                \n",
-    "                product = {\n",
-    "                    'name': name.title(),\n",
-    "                    'color': color,\n",
-    "                    'unit_price': random.randrange(10, 800),\n",
-    "                    'active': False,\n",
-    "                    'display_new': random.choice([True, False]),\n",
-    "                    'slug': create_product_slug(name, color),\n",
-    "                    'category': random.choice(CategoryChoices.choices)[-1]\n",
-    "                }\n",
-    "                \n",
-    "                is_on_sale = random.choice([True, False])\n",
-    "                if is_on_sale:\n",
-    "                    product['sale_value'] = random.randrange(10, 50)\n",
-    "                    product['on_sale'] = True\n",
-    "                else:\n",
-    "                    product['sale_value'] = 0\n",
-    "                    product['on_sale'] = False\n",
-    "                products.append(product)\n",
-    "                \n",
-    "        json.dump(products, f)\n",
-    "        print('Created', len(names), 'products')\n",
-    "        return products"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 47 products\n"
+      "Collected 298 images and 36 videos\n"
      ]
     }
    ],
    "source": [
-    "PRODUCTS = generate_generic_products()"
+    "PRODUCTS = create_product_fixtures()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Database objects creation\n",
-    "Create all the test items from above in the database"
+    "## Database object creation\n",
+    "\n",
+    "Save all of the items in the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_media_objects(commit=False, images_alone=False):\n",
     "    full_path, images, videos = collect_files()\n",
-    "        \n",
+    "    \n",
     "    def image_iterator():\n",
     "        for i, image in enumerate(images):\n",
-    "            f = open(os.path.join(full_path, image), mode='rb')\n",
+    "            f = open(full_path.joinpath(image), mode='rb')\n",
     "            base_name, _, _ = process_file_name(image)\n",
     "            clean_name = detect_media_name(base_name)\n",
     "            yield Image(name=f\"{clean_name}{i}\", original=File(f, name=image))\n",
@@ -390,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,9 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collected 298 images and 36 videos\n"
+     ]
+    }
+   ],
    "source": [
     "create_media_objects(commit=True, images_alone=False)"
    ]
@@ -443,11 +416,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a0bd6618edf0d14bd6f3961f5ce864ba9026d0b90c30defed834a200c37c8344"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -461,9 +431,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ca1f8d375db99c89027bddfa368829266f26ac0cbca399008cdce114dd4d48b9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
