--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -145,5 +145,6 @@
     "Choose your delivery method": "Opciones de envío",
     "Delivery between": "Entrega entre las {date1} del {date2}",
     "Choose a payment method": "Tipo de pago",
-    "Size guide lead": "¿No sabes cuál es tu talla? ¡Nuestra guía de tallas te ayudará a encontrar la que mejor te queda!"
+    "Size guide lead": "¿No sabes cuál es tu talla? ¡Nuestra guía de tallas te ayudará a encontrar la que mejor te queda!",
+    "Details": "Détails"
 }
