--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -144,5 +144,6 @@
     "Coupon": "Coupon",
     "Delivery between": "Entrega entre las {date1} del {date2}",
     "Choose a payment method": "Choose a payment method",
-    "Size guide lead": "Don't know your size? Our size guide help you find the best fit!"
+    "Size guide lead": "Don't know your size? Our size guide help you find the best fit!",
+    "Details": "Details"
 }
