--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -142,5 +142,6 @@
     "Coupon": "Code promotionnel",
     "Delivery between": "Entrega entre las {date1} del {date2}",
     "Choose a payment method": "Choose a payment method",
-    "Size guide lead": "Vous ne connaissez pas votre taille? Notre guide des tailles vous aidera à la trouver!"
+    "Size guide lead": "Vous ne connaissez pas votre taille? Notre guide des tailles vous aidera à la trouver!",
+    "Details": "Détails"
 }
